# pipeline_executor_mvp

./: README.md  pyproject.toml
data/: sample_schedule.json
pipeline_executor/: cli.py  contract.py  executor.py  loader.py  report_exporter.py  result_builder.py  selector.py
tests/: test_cli.py  test_contract.py  test_executor.py  test_loader.py  test_report_exporter.py  test_result_builder.py  test_selector.py
