[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-executor"
version = "0.1.0"
description = "Pipeline Executor MVP for executing scheduled pipeline tasks and producing execution reports in the RADAR Services utility chain."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RADAR Services" }
]
dependencies = []

[project.scripts]
pipeline-executor = "pipeline_executor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pipeline_executor*"]
exclude = ["data*", "tests*", "outputs*"]
